# eval-poc

./: .env.example  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.eval  NOTICE.md  README.md  dataset_descriptor.py  docker-entrypoint.sh  report_generator.py  run-eval-salt.py  run-eval.py  score_mapper.py  token_stats_generator.py  token_stats_summary.py
benchmarks/: README.md  __init__.py  catalog.yaml  config_schema.yaml  preflight.py  pyproject.toml
benchmarks/docs/abstention_bench/: abstention_bench_3.json  abstention_bench_en.md  abstention_bench_zh.md
benchmarks/docs/agentharm/: agentharm_3.json  agentharm_en.md  agentharm_zh.md
benchmarks/docs/agentic_misalignment/: agentic_misalignment_3.json  agentic_misalignment_en.md  agentic_misalignment_zh.md
benchmarks/docs/ahb/: ahb_3.json  ahb_en.md  ahb_zh.md
benchmarks/docs/assistant_bench/: assistant_bench_3.json  assistant_bench_en.md  assistant_bench_zh.md
benchmarks/docs/b3/: b3_3.json  b3_en.md  b3_zh.md
benchmarks/docs/bbq/: bbq_3.json  bbq_en.md  bbq_zh.md
benchmarks/docs/bfcl/: bfcl_3.json  bfcl_en.md  bfcl_zh.md
benchmarks/docs/bold/: bold_3.json  bold_en.md  bold_zh.md
benchmarks/docs/browse_comp/: browse_comp_3.json  browse_comp_en.md  browse_comp_zh.md
benchmarks/eval_benchmarks/: __init__.py  _registry.py
benchmarks/local/: __init__.py
benchmarks/patches/: makemesay_utils.py  osworld_sparse_clone.py  threecb_patch_dockerfiles.py
benchmarks/tools/: generate_benchmark_docs.py  list_samples.py  update_index.py
eval_to_demo/: README.md  (+4 more)
(+347 files in other folders)
