[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-benchmarks"
version = "0.1.0"
description = "Local security benchmarks for inspect_ai evaluation"
requires-python = ">=3.10"
dependencies = [
    "inspect-ai",
    "rouge-score",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.jsonl", "*.json"]
